--- a/conf/application.conf
+++ b/conf/application.conf
@@ -114,6 +114,7 @@ urls {
   cdsSubscribeUrl =  "https://www.gov.uk/guidance/get-access-to-the-customs-declaration-service"
   emailFrontend = "/manage-email-cds/service/customs-finance"
   apiGatekeeperFrontendUrl = "http://localhost:9684/api-gatekeeper"
+  apiGatekeeperApisFrontendUrl = "http://localhost:9682/api-gatekeeper-apis"
 }
 
 contact-frontend.serviceId = "Gatekeeper API"
