--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,7 +22,7 @@ play.modules.enabled += "uk.gov.hmrc.gatekeepercomposeemailfrontend.Microservice
 play.filters.enabled += play.filters.csp.CSPFilter
 
 # Default http client
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 play.http.parser.maxMemoryBuffer = 300K
 
