--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,9 +37,10 @@ emailSubject = "SendEmailRequest subject"
 api-gatekeeper-email-success-url = "http://localhost:9692/api-gatekeeper/compose-email/email"
 
 roles {
-  super-user = "super-user-role"
-  user = "user-role"
   admin = "admin-role"
+  super-user = "super-user-role"
+  advanced-user = "advanced-user-role"
+  user = "user-role"
 }
 
 play-frontend-hmrc {
